force-app/main/default/objects/CventEvents__LogConnector__c/fields/CventEvents__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RelatedRecordId__c</fullName>
    <description>Salesforce Id of the record related to the log.</description>
    <externalId>true</externalId>
    <inlineHelpText>Salesforce Id of the record related to the log.</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>