force-app/main/default/objects/CventEvents__LogConnector__c/fields/CventEvents__RelatedRecordName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RelatedRecordName__c</fullName>
    <description>Name of the record related to the log.</description>
    <externalId>true</externalId>
    <inlineHelpText>Name of the record related to the log.</inlineHelpText>
    <label>Related Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>