force-app/main/default/objects/CventEvents__LogConnector__c/fields/CventEvents__RelatedRecordType__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RelatedRecordType__c</fullName>
    <description>Object type of the related record.</description>
    <label>Related Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>